Adicionado galeria de imagens com animação de expansão da imagem

--- a/index.html
+++ b/index.html
@@ -24,6 +24,13 @@
     </div>
   </header>
 
+  <section class="modal">
+    <div class="modal-container">
+      <img src="img/foto1.jpg" alt="" id="modal-img">
+    </div>
+    <span id="btn-close">&times;</span>
+  </section>
+
   <section class="grid-section beer" id="beer">
     <h1 class="titulo">Igredientes da Cerveja</h1>
     <ul class="beerListas">
@@ -57,6 +64,28 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam iure beatae nihil fugiat nostrum asperiores accusantium eaque quod, exercitationem sapiente!</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam iure beatae nihil fugiat nostrum asperiores accusantium eaque quod, exercitationem sapiente!</p>
       </section>
+    </div>
+  </section>
+  <section class="galeria-container">
+    <div class="galeria-img">
+      <div class="card-img">
+        <img src="img/foto1.jpg" alt="" class="small-img">
+      </div>
+      <div class="card-img">
+        <img src="img/foto2.jpg" alt="" class="small-img">
+      </div>
+      <div class="card-img">
+        <img src="img/foto3.jpg" alt="" class="small-img">
+      </div>
+      <div class="card-img">
+        <img src="img/foto4.jpg" alt="" class="small-img">
+      </div>
+      <div class="card-img">
+        <img src="img/foto5.jpg" alt="" class="small-img">
+      </div>
+      <div class="card-img">
+        <img src="img/foto6.jpg" alt="" class="small-img">
+      </div>
     </div>
   </section>
   <section class="grid-section fac" id="faq">
